--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Ren</h1>
-<p>Gay sex?</p>
+<center><h1>Hello Ren</h1></center>
+<center><p>Gay sex?</p></center>
 </body>
 </html>
