--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<center><h1>Hello Ren</h1></center>
-<center><p>Gay sex?</p></center>
+<center><h1>Hello Oma</h1></center>
+<center><p>How are you?</p></center>
 </body>
 </html>
