--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<center><h1>Hello Oma</h1></center>
-<center><p>How are you?</p></center>
+<center><h1>Gay sex</h1></center>
 </body>
 </html>
