--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-black">
 	<head>
 		<meta charset="utf-8" />
-		<title>Wanted.lol - A streamlined biolink experience</title>
+		<title>exophs</title>
 		<link rel="icon" href="./logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
