--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 		
-		<link href="./_app/immutable/assets/0.05f1e519.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/27.4c20ea60.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/effects.5e90b67e.css" rel="stylesheet"><title>/ray</title><!-- HEAD_svelte-e0c4o9_START --><meta property="og:title" content="/ray"><meta property="og:description" content="@ ray"><meta property="og:image" content="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif"><meta property="og:url" content="https://exophs.github.io"><meta property="theme-color" content="#2b2d31"><!-- HEAD_svelte-e0c4o9_END -->
+		<link href="https://raw.githubusercontent.com/exophs/exophs.github.io/main/_app/assets/0.05f1e519.css./_app/immutable/assets/0.05f1e519.css" rel="stylesheet">
+		<link href="https://raw.githubusercontent.com/exophs/exophs.github.io/main/_app/assets/27.4c20ea60.css./_app/immutable/assets/27.4c20ea60.css" rel="stylesheet">
+		<link href="https://raw.githubusercontent.com/exophs/exophs.github.io/main/_app/assets/effects.5e90b67e.css" rel="stylesheet"><title>/ray</title><!-- HEAD_svelte-e0c4o9_START --><meta property="og:title" content="/ray"><meta property="og:description" content="@ ray"><meta property="og:image" content="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif"><meta property="og:url" content="https://exophs.github.io"><meta property="theme-color" content="#2b2d31"><!-- HEAD_svelte-e0c4o9_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" class="relative text-sm sm:text-base flex flex-col min-h-screen">
 		<div style="display: contents">
