--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-black">
     <head>
         <meta charset="utf-8"/>
-        <title>Wanted.lol - A streamlined biolink experience</title>
+        <title>exophs</title>
         <link rel="icon" href="./logo.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,9 +15,9 @@
         <title>/ray</title>
         <!-- HEAD_svelte-e0c4o9_START -->
         <meta property="og:title" content="/ray">
-        <meta property="og:description" content="@ wanted.lol">
+        <meta property="og:description" content="@ exophs">
         <meta property="og:image" content="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif">
-        <meta property="og:url" content="https://wanted.lol/ray">
+        <meta property="og:url" content="https://exophs.github.io/">
         <meta property="theme-color" content="#2b2d31">
         <!-- HEAD_svelte-e0c4o9_END -->
     </head>
@@ -27,7 +27,7 @@
                 <div class="flex flex-row items-center justify-center h-full w-full space-x-2 font-semibold">
                     <div id="blinker" class="svelte-8qvjaw"></div>
                     <div class="flex flex-col items-center justify-center space-x-2">
-                        <p class="text-sm sm:text-lg leading-8 text-center">welcome to wanted.lol</p>
+                        <p class="text-sm sm:text-lg leading-8 text-center">welcome to my website</p>
                         <p class="text-xs sm:text-base leading-8 text-center text-muted-foreground">loading profile...
 				</p>
                     </div>
@@ -399,7 +399,7 @@
                                     flag: 6,
                                     name: "Server Booster",
                                     url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/boost.png?t=2023-09-13T21%3A30%3A55.106Z",
-                                    description: "User boosts wanted.lol's discord server."
+                                    description: "User boosts ray's discord server."
                                 }],
                                 effects: [{
                                     flag: 0,
