--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>/ray</title>
         <!-- HEAD_svelte-e0c4o9_START -->
         <meta property="og:title" content="/ray">
-        <meta property="og:description" content="@ exophs">
+        <meta property="og:description" content="@ exophs.github.io/">
         <meta property="og:image" content="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif">
         <meta property="og:url" content="https://exophs.github.io/">
         <meta property="theme-color" content="#2b2d31">
