--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-black">
     <head>
         <meta charset="utf-8"/>
-        <title>exophs</title>
+        <title>/ray</title>
         <link rel="icon" href="./logo.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,7 @@
                     </svg>
                 </button>
             </div>
-            <div class="h-screen w-screen min-h-[100dvh] min-w-[100dvw] max-h-[100dvh] max-w-[100dvw] flex flex-col justify-center items-center" id="main" style="background-image: url(https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif); background-size: cover; background-position: center; object-fit: cover; backdrop-filter: blur(10px); cursor: url('null'), auto">
+            <div class="h-screen w-screen min-h-[100dvh] min-w-[100dvw] max-h-[100dvh] max-w-[100dvw] flex flex-col justify-center items-center" id="main" style="background-image: url(https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif); background-size: cover; background-position: center; object-fit: cover; backdrop-filter: blur(10px); cursor: url('ray'), auto">
                 <div class="absolute h-full w-full bg-black opacity-50"></div>
                 <div class="snow-container svelte-1o51aui">
                     <div class="snow svelte-1o51aui"></div>
