--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="bg-black">
     <head>
         <meta charset="utf-8"/>
-        <title>/ray</title>
-        <link rel="icon" href="./logo.png"/>
+        <title>ray</title>
+        <link rel="icon" href="logo.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
         <link href="./_app/immutable/assets/effects.5e90b67e.css" rel="stylesheet">
         <title>/ray</title>
         <!-- HEAD_svelte-e0c4o9_START -->
-        <meta property="og:title" content="/ray">
+        <meta property="og:title" content="ray">
         <meta property="og:description" content="@ exophs.github.io/">
         <meta property="og:image" content="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif">
         <meta property="og:url" content="https://exophs.github.io/">
