--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     </div>
                 </div>
             </div>
-            <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50 z-40 backdrop-blur-sm; cursor: url('exophs'), auto svelte-8qvjaw" id="entry">
-                <button class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-transparent border-0 text-white font-bold text-2xl uppercase w-full h-full text-center" style="cursor: url('exophs'), auto !important;">Click To Enter
+            <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50 z-40 backdrop-blur-sm; cursor: url('null'), auto svelte-8qvjaw" id="entry">
+                <button class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-transparent border-0 text-white font-bold text-2xl uppercase w-full h-full text-center" style="cursor: url('null'), auto !important;">Click To Enter
 		</button>
             </div>
             <div class="fixed right-0 mt-[10px] mr-[10px] z-[10] bg-transparent text-[#ffff]">
