--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 profileData: {
                                     slug: "ray",
                                     title: "ray",
-                                    description: "changeip || R: w1arning || love my friends",
+                                    description: ".exophs || R: w1arning || love my friends",
                                     avatar: "https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif",
                                     background: "https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif",
                                     music: "https://cdn.discordapp.com/attachments/1003413230267420766/1195343860667265074/wonder_if_u_care.mp3?ex=668349f8&is=6681f878&hm=6255ce032a9deb57e5de9aaf697a553265ccf04525781f7978dd8fc78339761d&",
