--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </svg>
                 </button>
             </div>
-            <div class="h-screen w-screen min-h-[100dvh] min-w-[100dvw] max-h-[100dvh] max-w-[100dvw] flex flex-col justify-center items-center" id="main" style="background-image: url(https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif); background-size: cover; background-position: center; object-fit: cover; backdrop-filter: blur(10px); cursor: url('ray'), auto">
+            <div class="h-screen w-screen min-h-[100dvh] min-w-[100dvw] max-h-[100dvh] max-w-[100dvw] flex flex-col justify-center items-center" id="main" style="background-image: url(https://ray.confusing.wtf/u/48xEZ1.jpg); background-size: cover; background-position: center; object-fit: cover; backdrop-filter: blur(10px); cursor: url('ray'), auto">
                 <div class="absolute h-full w-full bg-black opacity-50"></div>
                 <div class="snow-container svelte-1o51aui">
                     <div class="snow svelte-1o51aui"></div>
@@ -340,7 +340,7 @@
                                     title: "ray",
                                     description: ".exophs || R: w1arning || love my friends",
                                     avatar: "https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif",
-                                    background: "https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif",
+                                    background: "https://ray.confusing.wtf/u/48xEZ1.jpg",
                                     music: "https://cdn.discordapp.com/attachments/1003413230267420766/1195343860667265074/wonder_if_u_care.mp3?ex=668349f8&is=6681f878&hm=6255ce032a9deb57e5de9aaf697a553265ccf04525781f7978dd8fc78339761d&",
                                     discord: "changeip",
                                     badgeFlags: "0",
