--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="./_app/immutable/assets/0.05f1e519.css" rel="stylesheet">
         <link href="./_app/immutable/assets/27.4c20ea60.css" rel="stylesheet">
 	<link href="./_app/immutable/assets/effects.5e90b67e.css" rel="stylesheet">
+	<script src="./_app/immutable/chunks/923-d76ad5ccb5039c6c.js" defer=""></script>
         <title>/ray</title>
         <!-- HEAD_svelte-e0c4o9_START -->
         <meta property="og:title" content="ray">
