--- a/index.html
+++ b/index.html
@@ -48,6 +48,208 @@
             </div>
             <div class="h-screen w-screen min-h-[100dvh] min-w-[100dvw] max-h-[100dvh] max-w-[100dvw] flex flex-col justify-center items-center" id="main" style="background-image: url(https://ray.confusing.wtf/u/48xEZ1.jpg); background-size: cover; background-position: center; object-fit: cover; backdrop-filter: blur(10px); cursor: url('ray'), auto">
                 <div class="absolute h-full w-full bg-black opacity-50"></div>
+		div class="snow-container svelte-1o51aui">
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                    <div class="snow svelte-1o51aui"></div>
+                </div>
                 <div class="h-[100vh] w-[100%] flex justify-center items-center">
                     <div style="background: rgba(0,0,0,0.5)" class="glass drop-shadow-2xl max-w-[800px] w-full p-4 rounded-3xl mx-auto svelte-8qvjaw">
                         <div class="flex flex-col items-center space-y-2">
@@ -59,7 +261,6 @@
                                 </button>
                                 <span class="font-medium text-center svelte-385gfl" id="typewriter"></span>
                             </div>
-				<button>
                             <button data-state="open">
                                     <a href="/track?slug=ray&amp;destination=https://feds.lol/exophs" target="_blank" rel="noopener noreferrer">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-9 h-9 fill-white hover:scale-105 transition-all duration-200 ease-in-out" style="filter: drop-shadow(0 0 0.2rem white);">
