--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 profileData: {
                                     slug: "ray",
                                     title: "ray",
-                                    description: ".exophs || R: w1arning || love my friends",
+                                    description: "fuck you",
                                     avatar: "https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif",
                                     background: "https://ray.confusing.wtf/u/48xEZ1.jpg",
                                     music: "https://cdn.discordapp.com/attachments/1003413230267420766/1195343860667265074/wonder_if_u_care.mp3?ex=668349f8&is=6681f878&hm=6255ce032a9deb57e5de9aaf697a553265ccf04525781f7978dd8fc78339761d&",
