--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                                     showbadges: true,
                                     showviews: true,
                                     showuid: true,
-                                    pagetitle: null,
+                                    pagetitle: ray,
                                     animate: false,
                                     cursor: null,
                                     layout: 1,
