--- a/index.html
+++ b/index.html
@@ -364,91 +364,138 @@
                                     descriptionhex: null,
                                     socialhex: null
                                 },
-                                badges: [ { flag: 3, name: 'Gold Medalist', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/gold_medal.png',
-description: 'User won first place in our biolink competition' }, { flag: 4,
-name: 'Silver Medalist', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/silver_medal.png?t=2023-08-02T00%3A53%3A09.028Z',
-description: 'User won second place in our biolink competition' }, { flag: 5,
-name: 'Bronze Medalist', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/bronze_medal.png',
-description: 'User won third place in our biolink competition' }, { flag: 0,
-name: 'Staff', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/staff.svg',
-description: 'Staff' }, { flag: 1, name: 'Early Supporter', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/early_supporter.svg',
-description: 'Early Supporter' }, { flag: 2, name: 'Partner', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/partner.svg',
-description: 'Partner' }, { flag: 6, name: 'Server Booster', url:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/boost.png?t=2023-09-13T21%3A30%3A55.106Z',
-description: 'Server Booster' }, { flag: 7, name: 'Royalty', url:
-'https://wanted.lol/xx/assets/xbadge/7.gif', description: 'Royalty' }, { flag:
-8, name: 'Bug Hunter', url: 'https://wanted.lol/xx/assets/xbadge/8.png',
-description: 'Bug Hunter' }, { flag: 9, name: 'Blackhat', url:
-'https://wanted.lol/xx/assets/xbadge/9.png', description: 'Blackhat' }, { flag:
-10, name: 'Diamond', url: 'https://wanted.lol/xx/assets/xbadge/10.gif',
-description: 'Diamond' }, { flag: 11, name: 'ui', url:
-'https://wanted.lol/xx/assets/xbadge/11.jpg', description: 'for the one and only
-ui' }, { flag: 12, name: 'lean', url:
-'https://wanted.lol/xx/assets/xbadge/12.png', description: 'lean' }, { flag: 13,
-name: 'Unknown', url: 'https://wanted.lol/xx/assets/xbadge/13.png', description:
-'Unknown' }, { flag: 14, name: 'Artisan', url:
-'https://wanted.lol/xx/assets/xbadge/14.png', description: 'Artisan' }, { flag:
-15, name: 'Artisan', url: 'https://wanted.lol/xx/assets/xbadge/15.png',
-description: 'Artisan' }, { flag: 16, name: 'Sarina’s home', url:
-'https://wanted.lol/xx/assets/xbadge/16.png', description: 'Sarina’s home' }, {
-flag: 17, name: 'Dev', url: 'https://wanted.lol/xx/assets/xbadge/17.gif',
-description: 'Dev' }, { flag: 18, name: 'ROBLOX Veteran (Cir. 2009)', url:
-'https://wanted.lol/xx/assets/xbadge/18.gif', description: 'ROBLOX Veteran (Cir.
-2009)' }, { flag: 19, name: '/tuh', url:
-'https://wanted.lol/xx/assets/xbadge/19.gif', description: '/tuh' } ], effects:
-[ { flag: 1, name: 'Title Sparkles', description: 'Sparkle effect for your
-name.', thumbnail:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/thumbnails/TitleSparkle.png?t=2023-08-30T20%3A19%3A47.385Z',
-price: 400, purchaceable: true }, { flag: 5, name: 'Green Title Glow',
-description: 'Green glow around your title', thumbnail: '', price: 200,
-purchaceable: true }, { flag: 6, name: 'Orange Title Glow', description: 'Orange
-glow around your title', thumbnail: '', price: 200, purchaceable: true }, {
-flag: 7, name: 'Red Title Glow', description: 'Red glow around your title',
-thumbnail: '', price: 200, purchaceable: true }, { flag: 8, name: 'White Title
-Glow', description: 'White glow around your title', thumbnail: '', price: 200,
-purchaceable: true }, { flag: 9, name: 'Yellow Title Glow', description: 'Yellow
-glow around your title', thumbnail: '', price: 200, purchaceable: true }, {
-flag: 4, name: 'Blue Title Glow', description: 'Blue glow around your title',
-thumbnail: '', price: 200, purchaceable: true }, { flag: 3, name: 'Black Title
-Glow', description: 'Black glow around your title', thumbnail: '', price: 200,
-purchaceable: true }, { flag: 10, name: 'Typewriter', description: 'A typewriter
-effect for your description.', thumbnail: '', price: 400, purchaceable: true },
-{ flag: 11, name: 'RGB Title Glow', description: '', thumbnail: '', price: 100,
-purchaceable: true }, { flag: 13, name: 'Bubble Cursor', description: '',
-thumbnail: '', price: 100, purchaceable: false }, { flag: 14, name: 'Fairy Dust
-Cursor', description: '', thumbnail: '', price: 100, purchaceable: false }, {
-flag: 15, name: 'Dot Cursor', description: '', thumbnail: '', price: 100,
-purchaceable: false }, { flag: 16, name: 'Ghost Cursor', description: '',
-thumbnail: '', price: 100, purchaceable: false }, { flag: 17, name: 'Rainbow
-Cursor', description: '', thumbnail: '', price: 100, purchaceable: false }, {
-flag: 18, name: 'Snowflake Cursor', description: '', thumbnail: '', price: 100,
-purchaceable: false }, { flag: 19, name: 'Trailing Cursor', description: '',
-thumbnail: '', price: 100, purchaceable: false }, { flag: 0, name: 'Snow
-Background Effect', description: 'Snow effect', thumbnail:
-'https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/thumbnails/Snow.png',
-price: 400, purchaceable: true }, { flag: 20, name: 'Title Thunder',
-description: 'Thunder effect for your name', thumbnail: '', price: 100,
-purchaceable: true }, { flag: 2, name: 'Purple Title Glow', description: 'Purple
-glow around your title (for: ui)', thumbnail: '', price: 200, purchaceable: true
-}, { flag: 21, name: 'Title Light Sweep', description: 'Light sweep animation
-for your name', thumbnail: '', price: 100, purchaceable: false }, { flag: 22,
-name: 'Star Background Effect', description: 'Falling Star', thumbnail: '',
-price: 100, purchaceable: true }, { flag: 23, name: 'Firefly Background Effect',
-description: 'Firefly effect', thumbnail: '', price: 100, purchaceable: true },
-{ flag: 12, name: '', description: '', thumbnail: '', price: 100, purchaceable:
-true }, { flag: 24, name: 'Rain Background Effect', description: 'Rain effect',
-thumbnail: ' ', price: 100, purchaceable: true }, { flag: 25, name: 'Sakura
-Background Effect', description: 'Sakura effect', thumbnail: ' ', price: 100,
-purchaceable: true }, { flag: 26, name: 'Bubble Background Effect', description:
-'Bubble effect', thumbnail: '', price: 100, purchaceable: true }, { flag: 27,
-name: 'Cloud Background Effect', description: 'Cloud Effect', thumbnail: ' ',
-price: 100, purchaceable: true } ],
+                                badges: [{
+                                    flag: 0,
+                                    name: "Staff",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/staff.svg",
+                                    description: "User is a staff member"
+                                }, {
+                                    flag: 1,
+                                    name: "Early Supporter",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/early_supporter.svg",
+                                    description: "User is an early supporter"
+                                }, {
+                                    flag: 2,
+                                    name: "Partner",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/partner.svg",
+                                    description: "User is partnered"
+                                }, {
+                                    flag: 3,
+                                    name: "Gold Medalist",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/gold_medal.png",
+                                    description: "User won first place in our biolink competition"
+                                }, {
+                                    flag: 4,
+                                    name: "Silver Medalist",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/silver_medal.png?t=2023-08-02T00%3A53%3A09.028Z",
+                                    description: "User won second place in our biolink competition"
+                                }, {
+                                    flag: 5,
+                                    name: "Bronze Medalist",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/bronze_medal.png",
+                                    description: "User won third place in our biolink competition"
+                                }, {
+                                    flag: 6,
+                                    name: "Server Booster",
+                                    url: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/badges/boost.png?t=2023-09-13T21%3A30%3A55.106Z",
+                                    description: "User boosts ray's discord server."
+                                }],
+                                effects: [{
+                                    flag: 0,
+                                    name: "Snow",
+                                    description: "Snow effect",
+                                    thumbnail: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/thumbnails/Snow.png",
+                                    price: 400,
+                                    purchaceable: true
+                                }, {
+                                    flag: 1,
+                                    name: "Title Sparkles",
+                                    description: "Sparkle effect for your name.",
+                                    thumbnail: "https://plgoztnonlmrccdukuxo.supabase.co/storage/v1/object/public/thumbnails/TitleSparkle.png?t=2023-08-30T20%3A19%3A47.385Z",
+                                    price: 400,
+                                    purchaceable: true
+                                }, {
+                                    flag: 5,
+                                    name: "Green Title Glow",
+                                    description: "Green glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 6,
+                                    name: "Orange Title Glow",
+                                    description: "Orange glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 7,
+                                    name: "Red Title Glow",
+                                    description: "Red glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 8,
+                                    name: "White Title Glow",
+                                    description: "White glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 9,
+                                    name: "Yellow Title Glow",
+                                    description: "Yellow glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 4,
+                                    name: "Blue Title Glow",
+                                    description: "Blue glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 3,
+                                    name: "Black Title Glow",
+                                    description: "Black glow around your title",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 2,
+                                    name: "Purple Title Glow",
+                                    description: "Purple glow around your title (for: ui)",
+                                    thumbnail: "",
+                                    price: 200,
+                                    purchaceable: true
+                                }, {
+                                    flag: 10,
+                                    name: "Typewriter",
+                                    description: "A typewriter effect for your description.",
+                                    thumbnail: "",
+                                    price: 400,
+                                    purchaceable: true
+                                }, {
+                                    flag: 11,
+                                    name: "RGB Text",
+                                    description: "",
+                                    thumbnail: "",
+                                    price: 100,
+                                    purchaceable: true
+                                }, {
+                                    flag: 12,
+                                    name: "Crypto Snow",
+                                    description: "",
+                                    thumbnail: "",
+                                    price: 100,
+                                    purchaceable: true
+                                }],
+                                views: 42069,
+                                pageLayout: 1
+                            }
+                        },
                         "uses": {
                             "params": ["slug"]
                         }
