--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <div class="snow svelte-1o51aui"></div>
                 </div>
                 <div class="h-[100vh] w-[100%] flex justify-center items-center">
-                    <div style="background: rgba(0,0,0,0.5); backdrop-filter: blur(40px); -webkit-backdrop-filter: blur(40px);" class="drop-shadow-2xl max-w-[900px] w-full p-4 rounded-3xl mx-auto ">
+                    <div style="background: rgba(0,0,0,0.5)" class="glass drop-shadow-2xl max-w-[800px] w-full p-4 rounded-3xl mx-auto svelte-8qvjaw">
                         <div class="flex flex-col items-center space-y-2">
                             <img src="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif" class="rounded-full w-32 h-32 object-cover drop-shadow-2xl" alt="avatar">
                             <div class="flex flex-row space-x-1"></div>
