--- a/index.html
+++ b/index.html
@@ -307,18 +307,22 @@
             <div
               class="flex justify-center items-center flex-col w-[100%] mt-[11px] gap-[5px]"
             >
-              <button
+              <a
+                href="https://exophs.github.io/"
                 class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background hover:bg-primary/90 h-10 py-2 px-4 w-[50%] bg-[#00000070] text-white hover:text-black"
                 style="backdrop-filter: blur(20px)"
               >
-                my copy of this kinda (shhhh...)</button
-              ><button
+                my copy of this kinda (shhhh...)
+              </a>
+              <a
+                href="https://exophs.github.io/"
                 class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background hover:bg-primary/90 h-10 py-2 px-4 w-[50%] bg-[#00000070] text-white hover:text-black"
                 style="backdrop-filter: blur(20px)"
               >
                 my website
-              </button>
+              </a>
             </div>
+
             <div class="flex gap-[5px] text-[15px] items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -374,7 +378,7 @@
                     music:
                       "https://wanted.lol/cdn/music/c4b411ac-59be-4358-a5e1-0354fa2f3931.mp3",
                     discord: "changeip",
-                    effectFlags: "16",
+                    effectFlags: "0",
                     publicBadgeFlags: "0",
                     publicEffectFlags: "0",
                     links: [
