--- a/index.html
+++ b/index.html
@@ -305,18 +305,18 @@
               </div>
             </div>
             <div
-              class="flex justify-center items-center flex-col w-[100%] mt-[11px] gap-[5px]"
+              class="flex justify-center items-center flex-col w-full mt-3 gap-1"
             >
               <a
-                href="https://exophs.github.io/"
-                class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background hover:bg-primary/90 h-10 py-2 px-4 w-[50%] bg-[#00000070] text-white hover:text-black"
+                href="https://exophs.github.io/" target="_blank" rel="noopener noreferrer"
+                class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none hover:bg-primary/90 h-10 py-2 px-4 w-1/2 bg-black bg-opacity-70 text-white hover:text-black"
                 style="backdrop-filter: blur(20px)"
               >
                 my copy of this kinda (shhhh...)
               </a>
               <a
-                href="https://exophs.github.io/"
-                class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background hover:bg-primary/90 h-10 py-2 px-4 w-[50%] bg-[#00000070] text-white hover:text-black"
+                href="https://exophs.glitch.me/" target="_blank" rel="noopener noreferrer"
+                class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none hover:bg-primary/90 h-10 py-2 px-4 w-1/2 bg-black bg-opacity-70 text-white hover:text-black"
                 style="backdrop-filter: blur(20px)"
               >
                 my website
