--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   type="button"
                 >
                   <a
-                    href="/track?slug=ray&destination=https://feds.lol/exophs"
+                    href="https://feds.lol/exophs"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -187,7 +187,7 @@
                   type="button"
                 >
                   <a
-                    href="/track?slug=ray&destination=https://github.com//EveryoneHatesRay"
+                    href="https://github.com//EveryoneHatesRay"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -212,7 +212,7 @@
                   type="button"
                 >
                   <a
-                    href="/track?slug=ray&destination=https://www.roblox.com/users/594466748/profile"
+                    href="https://www.roblox.com/users/594466748/profile"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -237,7 +237,7 @@
                   type="button"
                 >
                   <a
-                    href="/track?slug=ray&destination=https://steamcommunity.com/profiles/76561199021295065"
+                    href="https://steamcommunity.com/profiles/76561199021295065"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -262,7 +262,7 @@
                   type="button"
                 >
                   <a
-                    href="/track?slug=ray&destination=https://www.instagram.com/exophorism/"
+                    href="https://www.instagram.com/exophorism/"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -287,7 +287,7 @@
                   type="button"
                 >
                   <a
-                    href="/track?slug=ray&destination=https://open.spotify.com/user/cirtg2fpchpi5vy45g81wy0tp"
+                    href="https://open.spotify.com/user/cirtg2fpchpi5vy45g81wy0tp"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
