--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   type="button"
                 >
                   <a
-                    href="https://github.com//EveryoneHatesRay"
+                    href="https://github.com/exophs"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -212,7 +212,7 @@
                   type="button"
                 >
                   <a
-                    href="https://www.roblox.com/users/594466748/profile"
+                    href="https://www.roblox.com/users/594466748/profile (termed)"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
