--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                   type="button"
                 >
                   <a
-                    href="https://www.roblox.com/users/594466748/profile (termed)"
+                    href="https://www.roblox.com/users/594466748/profile"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><svg
@@ -384,7 +384,7 @@
                     links: [
                       "https://feds.lol/exophs",
                       "https://github.com/exophs",
-                      "https://www.roblox.com/users/594466748/profile",
+                      "https://www.roblox.com/users/594466748/profile (termed)",
                       "https://steamcommunity.com/profiles/76561199021295065",
                       "https://www.instagram.com/exophorism/",
                       "https://open.spotify.com/user/cirtg2fpchpi5vy45g81wy0tp",
