--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         class="h-screen w-screen min-h-[100dvh] min-w-[100dvw] max-h-[100dvh] max-w-[100dvw] flex flex-col justify-center items-center"
         id="main"
         style="
-          background-image: url(https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif);
+          background-image: url();
           background-size: cover;
           background-position: center;
           object-fit: cover;
@@ -374,7 +374,7 @@
                     avatar:
                       "https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif",
                     background:
-                      "https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif",
+                      "",
                     music:
                       "https://wanted.lol/cdn/music/c4b411ac-59be-4358-a5e1-0354fa2f3931.mp3",
                     discord: "changeip",
