--- a/index.html
+++ b/index.html
@@ -308,18 +308,18 @@
               class="flex justify-center items-center flex-col w-full mt-3 gap-1"
             >
               <a
-                href="https://exophs.github.io/" target="_blank" rel="noopener noreferrer"
+                href="https://exophs.github.io/webgl" target="_blank" rel="noopener noreferrer"
                 class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none hover:bg-primary/90 h-10 py-2 px-4 w-1/2 bg-black bg-opacity-70 text-white hover:text-black"
                 style="backdrop-filter: blur(20px)"
               >
-                my copy of this kinda (shhhh...)
+                WebGL Fluid Simulation
               </a>
               <a
-                href="https://exophs.glitch.me/" target="_blank" rel="noopener noreferrer"
+                href="https://exophs.github.io/webgl-v2" target="_blank" rel="noopener noreferrer"
                 class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none hover:bg-primary/90 h-10 py-2 px-4 w-1/2 bg-black bg-opacity-70 text-white hover:text-black"
                 style="backdrop-filter: blur(20px)"
               >
-                my website
+                WebGL Fluid Simulation V2
               </a>
             </div>
 
