--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
                     socialhex: null,
                     buttons: [
                       {
-                        title: "my copy of this kinda (shhhh...)",
-                        url: "https://exophs.github.io/",
+                        title: "WebGL Fluid Simulation",
+                        url: "https://exophs.github.io/webgl",
                       },
-                      { title: "my website", url: "https://exophs.glitch.me/" },
+                      { title: "WebGL Fluid Simulation V2", url: "https://exophs.glitch.me/webgl-v2" },
                     ],
                     badgeFlags: "0",
                     ebadges: [],
