--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="./_app/immutable/assets/32.b84f8994.css" rel="stylesheet" />
     <title>/ray</title>
     <!-- HEAD_svelte-e0c4o9_START -->
-    <meta property="og:title" content="/ray" />
-    <meta property="og:description" content="@ wanted.lol" />
+    <meta property="og:title" content="social links" />
+    <meta property="og:description" content="@ exophs" />
     <meta
       property="og:image"
       content="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif"
