--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div id="blinker" class="svelte-90t6g4"></div>
           <div class="flex flex-col items-center justify-center space-x-2">
             <p class="text-sm sm:text-lg leading-8 text-center">
-              welcome to wanted.lol
+              welcome to exophs.github.io
             </p>
             <p
               class="text-xs sm:text-base leading-8 text-center text-muted-foreground"
