--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
           >
             <div class="flex flex-col items-center space-y-2">
               <img
-                src="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif"
+                rc="https://media.giphy.com/media/extC9oON4WuCiCc3AJ/giphy.gif"
                 class="rounded-full w-32 h-32 object-cover drop-shadow-2xl"
                 alt="avatar"
-              />
-
+                draggable="false"
+                />
+            </div>
               <div class="flex flex-col items-center">
                 <div
                   class="flex mt-[30px] flex-col justify-center items-center gap-[5px]"
