--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     showbadges: null,
                     showviews: true,
                     showuid: null,
-                    pagetitle: "gay sex",
+                    pagetitle: "welcome",
                     animate: false,
                     cursor: null,
                     layout: 1,
